[package]
name = "maunucm"
version = "0.1.0"
edition = "2021"
description = "Russian Counter Strike nickname generator"
license = "MIT"
repository = "https://github.com/impossibletea/maunucm"
authors = ["impossibleTea"]
categories = ["command-line-utilities", "parsing", "localization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
